--- a/.config/i3/config
+++ b/.config/i3/config
@@ -10,7 +10,7 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 # class                 border  bground text    indicator child_border
-client.focused          #6272A4 #6272A4 #F8F8F2 #6272A4   #6272A4
+client.focused          #f9affa§ #6272A4 #F8F8F2 #6272A4   #6272A4
 client.focused_inactive #44475A #44475A #F8F8F2 #44475A   #44475A
 client.unfocused        #282A36 #282A36 #BFBFBF #282A36   #282A36
 client.urgent           #44475A #FF5555 #F8F8F2 #FF5555   #FF5555
@@ -18,7 +18,7 @@ client.placeholder      #282A36 #282A36 #F8F8F2 #282A36   #282A36
 
 client.background       #F8F8F2
 
-set $mod Mod1
+set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -213,7 +213,9 @@ bindsym $mod+shift+v exec "pkill -USR1 polybar"
 
 # Disable window titlebars entirely
 border_radius 10
-for_window [class="^.*"] border pixel 0
+for_window [class=".*"] border pixel 4
+
+new_window 1pixel
 
 # Set inner/outer gaps
 gaps inner 15
